cmake_minimum_required(VERSION 3.9)
project(testEpoll)

set(CMAKE_CXX_STANDARD 11)

add_executable(testEpoll
        agilNet/agilNet/net/http/HttpContext.cpp
        agilNet/agilNet/net/http/HttpContext.h
        agilNet/agilNet/net/http/HttpRequest.h
        agilNet/agilNet/net/http/HttpResponse.cpp
        agilNet/agilNet/net/http/HttpResponse.h
        agilNet/agilNet/net/http/HttpServer.cpp
        agilNet/agilNet/net/http/HttpServer.h
        agilNet/agilNet/net/Buffer.cpp
        agilNet/agilNet/net/Buffer.h
        agilNet/agilNet/net/Epoll.cpp
        agilNet/agilNet/net/Epoll.h
        agilNet/agilNet/net/IOEvent.cpp
        agilNet/agilNet/net/IOEvent.h
        agilNet/agilNet/net/IOEventCtrl.cpp
        agilNet/agilNet/net/IOEventCtrl.h
        agilNet/agilNet/net/IOEventLoop.cpp
        agilNet/agilNet/net/IOEventLoop.h
        agilNet/agilNet/net/IOEventLoopThread.cpp
        agilNet/agilNet/net/IOEventLoopThread.h
        agilNet/agilNet/net/IOEventLoopThreadPool.cpp
        agilNet/agilNet/net/IOEventLoopThreadPool.h
        agilNet/agilNet/net/Socket.cpp
        agilNet/agilNet/net/Socket.h
        agilNet/agilNet/net/SocketAddr.cpp
        agilNet/agilNet/net/SocketAddr.h
        agilNet/agilNet/net/SocketOperation.cpp
        agilNet/agilNet/net/SocketOperation.h
        agilNet/agilNet/net/TcpAccept.cpp
        agilNet/agilNet/net/TcpAccept.h
        agilNet/agilNet/net/TcpConnect.cpp
        agilNet/agilNet/net/TcpConnect.h
        agilNet/agilNet/net/TcpServer.cpp
        agilNet/agilNet/net/TcpServer.h
        agilNet/agilNet/net/Timer.cpp
        agilNet/agilNet/net/Timer.h
        agilNet/agilNet/net/TimerQueue.cpp
        agilNet/agilNet/net/TimerQueue.h
        agilNet/agilNet/support/AtomicInt.h
        agilNet/agilNet/support/Condition.h
        agilNet/agilNet/support/Log.cpp
        agilNet/agilNet/support/Log.h
        agilNet/agilNet/support/Mutex.h
        agilNet/agilNet/support/Thread.cpp
        agilNet/agilNet/support/Thread.h
        agilNet/demo/echo/EchoServer.cpp
        agilNet/demo/echo/EchoServer.h
        agilNet/demo/echo/main.cpp
        agilNet/demo/http/HttpServerDemo.cpp
        agilNet/demo/http/HttpServerDemo.h
        agilNet/demo/http/main.cpp
        agilNet/demo/timer/main.cpp
        ehttp/deps/http-parser/contrib/parsertrace.c
        ehttp/deps/http-parser/contrib/url_parser.c
        ehttp/deps/http-parser/bench.c
        ehttp/deps/http-parser/http_parser.c
        ehttp/deps/http-parser/http_parser.h
        ehttp/deps/http-parser/test.c
        ehttp/deps/json-cpp/include/json/autolink.h
        ehttp/deps/json-cpp/include/json/config.h
        ehttp/deps/json-cpp/include/json/features.h
        ehttp/deps/json-cpp/include/json/forwards.h
        ehttp/deps/json-cpp/include/json/json.h
        ehttp/deps/json-cpp/include/json/reader.h
        ehttp/deps/json-cpp/include/json/value.h
        ehttp/deps/json-cpp/include/json/writer.h
        ehttp/deps/json-cpp/src/jsontestrunner/main.cpp
        ehttp/deps/json-cpp/src/lib_json/json_batchallocator.h
        ehttp/deps/json-cpp/src/lib_json/json_reader.cpp
        ehttp/deps/json-cpp/src/lib_json/json_tool.h
        ehttp/deps/json-cpp/src/lib_json/json_value.cpp
        ehttp/deps/json-cpp/src/lib_json/json_writer.cpp
        ehttp/deps/json-cpp/src/test_lib_json/jsontest.cpp
        ehttp/deps/json-cpp/src/test_lib_json/jsontest.h
        ehttp/deps/json-cpp/src/test_lib_json/main.cpp
        ehttp/deps/multipart-parser-c/multipart_parser.c
        ehttp/deps/multipart-parser-c/multipart_parser.h
        ehttp/src/epoll_socket.cpp
        ehttp/src/epoll_socket.h
        ehttp/src/http_server.cpp
        ehttp/src/http_server.h
        ehttp/src/sim_parser.cpp
        ehttp/src/sim_parser.h
        ehttp/src/simple_config.cpp
        ehttp/src/simple_config.h
        ehttp/src/simple_log.cpp
        ehttp/src/simple_log.h
        ehttp/src/threadpool.cpp
        ehttp/src/threadpool.h
        ehttp/test/issue5/issue5_server.cpp
        ehttp/test/http_parser_test.cpp
        ehttp/test/http_server_test.cpp
        epoll_threadpool/src/barrier.h
        epoll_threadpool/src/eventmanager.cc
        epoll_threadpool/src/eventmanager.h
        epoll_threadpool/src/eventmanager_test.cc
        epoll_threadpool/src/future.h
        epoll_threadpool/src/future_test.cc
        epoll_threadpool/src/iobuffer.h
        epoll_threadpool/src/iobuffer_test.cc
        epoll_threadpool/src/notification.h
        epoll_threadpool/src/tcp.cc
        epoll_threadpool/src/tcp.h
        epoll_threadpool/src/tcp_test.cc
        handy/10m/10m-cli.cc
        handy/10m/10m-svr.cc
        handy/docs/epoll详细中文注释.c
        handy/examples/chat.cc
        handy/examples/codec-cli.cc
        handy/examples/codec-svr.cc
        handy/examples/daemon.cc
        handy/examples/echo.cc
        handy/examples/hsha.cc
        handy/examples/http-hello.cc
        handy/examples/idle-close.cc
        handy/examples/reconnect.cc
        handy/examples/safe-close.cc
        handy/examples/stat.cc
        handy/examples/timer.cc
        handy/examples/udp-cli.cc
        handy/examples/udp-hsha.cc
        handy/examples/udp-svr.cc
        handy/examples/write-on-empty.cc
        handy/handy/codec.cc
        handy/handy/codec.h
        handy/handy/conf.cc
        handy/handy/conf.h
        handy/handy/conn.cc
        handy/handy/conn.h
        handy/handy/daemon.cc
        handy/handy/daemon.h
        handy/handy/event_base.cc
        handy/handy/event_base.h
        handy/handy/file.cc
        handy/handy/file.h
        handy/handy/handy-imp.h
        handy/handy/http.cc
        handy/handy/http.h
        handy/handy/logging.cc
        handy/handy/logging.h
        handy/handy/net.cc
        handy/handy/net.h
        handy/handy/poller.cc
        handy/handy/poller.h
        handy/handy/port_posix.cc
        handy/handy/port_posix.h
        handy/handy/slice.h
        handy/handy/stat-svr.cc
        handy/handy/stat-svr.h
        handy/handy/status.h
        handy/handy/threads.cc
        handy/handy/threads.h
        handy/handy/udp.cc
        handy/handy/udp.h
        handy/handy/util.cc
        handy/handy/util.h
        handy/protobuf/proto_msg.cc
        handy/protobuf/proto_msg.h
        handy/protobuf/test.cc
        handy/raw-examples/epoll-et.cc
        handy/raw-examples/epoll.cc
        handy/raw-examples/epoll_1_client.cpp
        handy/raw-examples/epoll_1_server.cpp
        handy/raw-examples/epoll_demo.c
        handy/raw-examples/kqueue.cc
        handy/test/conf.ut.cc
        handy/test/tcpcli.ut.cc
        handy/test/test_harness.cc
        handy/test/test_harness.h
        handy/test/threads.ut.cc
        handy/test/ut.cc
        handy/test/util.ut.cc
        live555/BasicUsageEnvironment/include/BasicHashTable.hh
        live555/BasicUsageEnvironment/include/BasicUsageEnvironment.hh
        live555/BasicUsageEnvironment/include/BasicUsageEnvironment0.hh
        live555/BasicUsageEnvironment/include/BasicUsageEnvironment_version.hh
        live555/BasicUsageEnvironment/include/DelayQueue.hh
        live555/BasicUsageEnvironment/include/HandlerSet.hh
        live555/BasicUsageEnvironment/BasicHashTable.cpp
        live555/BasicUsageEnvironment/BasicTaskScheduler.cpp
        live555/BasicUsageEnvironment/BasicTaskScheduler0.cpp
        live555/BasicUsageEnvironment/BasicUsageEnvironment.cpp
        live555/BasicUsageEnvironment/BasicUsageEnvironment0.cpp
        live555/BasicUsageEnvironment/DelayQueue.cpp
        live555/EpollTaskScheduler/include/EpollTaskScheduler.hh
        live555/EpollTaskScheduler/epoll.c
        live555/EpollTaskScheduler/epoll.h
        live555/EpollTaskScheduler/EpollTaskScheduler.cpp
        live555/EpollTaskScheduler/msafd.h
        live555/EpollTaskScheduler/ntapi.h
        live555/EpollTaskScheduler/tree.h
        live555/groupsock/include/GroupEId.hh
        live555/groupsock/include/Groupsock.hh
        live555/groupsock/include/groupsock_version.hh
        live555/groupsock/include/GroupsockHelper.hh
        live555/groupsock/include/IOHandlers.hh
        live555/groupsock/include/NetAddress.hh
        live555/groupsock/include/NetCommon.h
        live555/groupsock/include/NetInterface.hh
        live555/groupsock/include/TunnelEncaps.hh
        live555/groupsock/GroupEId.cpp
        live555/groupsock/Groupsock.cpp
        live555/groupsock/GroupsockHelper.cpp
        live555/groupsock/inet.c
        live555/groupsock/IOHandlers.cpp
        live555/groupsock/NetAddress.cpp
        live555/groupsock/NetInterface.cpp
        live555/liveMedia/include/AC3AudioFileServerMediaSubsession.hh
        live555/liveMedia/include/AC3AudioRTPSink.hh
        live555/liveMedia/include/AC3AudioRTPSource.hh
        live555/liveMedia/include/AC3AudioStreamFramer.hh
        live555/liveMedia/include/ADTSAudioFileServerMediaSubsession.hh
        live555/liveMedia/include/ADTSAudioFileSource.hh
        live555/liveMedia/include/AMRAudioFileServerMediaSubsession.hh
        live555/liveMedia/include/AMRAudioFileSink.hh
        live555/liveMedia/include/AMRAudioFileSource.hh
        live555/liveMedia/include/AMRAudioRTPSink.hh
        live555/liveMedia/include/AMRAudioRTPSource.hh
        live555/liveMedia/include/AMRAudioSource.hh
        live555/liveMedia/include/AudioInputDevice.hh
        live555/liveMedia/include/AudioRTPSink.hh
        live555/liveMedia/include/AVIFileSink.hh
        live555/liveMedia/include/Base64.hh
        live555/liveMedia/include/BasicUDPSink.hh
        live555/liveMedia/include/BasicUDPSource.hh
        live555/liveMedia/include/BitVector.hh
        live555/liveMedia/include/ByteStreamFileSource.hh
        live555/liveMedia/include/ByteStreamMemoryBufferSource.hh
        live555/liveMedia/include/ByteStreamMultiFileSource.hh
        live555/liveMedia/include/DeviceSource.hh
        live555/liveMedia/include/DigestAuthentication.hh
        live555/liveMedia/include/DVVideoFileServerMediaSubsession.hh
        live555/liveMedia/include/DVVideoRTPSink.hh
        live555/liveMedia/include/DVVideoRTPSource.hh
        live555/liveMedia/include/DVVideoStreamFramer.hh
        live555/liveMedia/include/FileServerMediaSubsession.hh
        live555/liveMedia/include/FileSink.hh
        live555/liveMedia/include/FramedFileSource.hh
        live555/liveMedia/include/FramedFilter.hh
        live555/liveMedia/include/FramedSource.hh
        live555/liveMedia/include/GenericMediaServer.hh
        live555/liveMedia/include/GSMAudioRTPSink.hh
        live555/liveMedia/include/H261VideoRTPSource.hh
        live555/liveMedia/include/H263plusVideoFileServerMediaSubsession.hh
        live555/liveMedia/include/H263plusVideoRTPSink.hh
        live555/liveMedia/include/H263plusVideoRTPSource.hh
        live555/liveMedia/include/H263plusVideoStreamFramer.hh
        live555/liveMedia/include/H264or5VideoFileSink.hh
        live555/liveMedia/include/H264or5VideoRTPSink.hh
        live555/liveMedia/include/H264or5VideoStreamDiscreteFramer.hh
        live555/liveMedia/include/H264or5VideoStreamFramer.hh
        live555/liveMedia/include/H264VideoFileServerMediaSubsession.hh
        live555/liveMedia/include/H264VideoFileSink.hh
        live555/liveMedia/include/H264VideoRTPSink.hh
        live555/liveMedia/include/H264VideoRTPSource.hh
        live555/liveMedia/include/H264VideoStreamDiscreteFramer.hh
        live555/liveMedia/include/H264VideoStreamFramer.hh
        live555/liveMedia/include/H265VideoFileServerMediaSubsession.hh
        live555/liveMedia/include/H265VideoFileSink.hh
        live555/liveMedia/include/H265VideoRTPSink.hh
        live555/liveMedia/include/H265VideoRTPSource.hh
        live555/liveMedia/include/H265VideoStreamDiscreteFramer.hh
        live555/liveMedia/include/H265VideoStreamFramer.hh
        live555/liveMedia/include/InputFile.hh
        live555/liveMedia/include/JPEGVideoRTPSink.hh
        live555/liveMedia/include/JPEGVideoRTPSource.hh
        live555/liveMedia/include/JPEGVideoSource.hh
        live555/liveMedia/include/liveMedia.hh
        live555/liveMedia/include/liveMedia_version.hh
        live555/liveMedia/include/Locale.hh
        live555/liveMedia/include/MatroskaFile.hh
        live555/liveMedia/include/MatroskaFileServerDemux.hh
        live555/liveMedia/include/Media.hh
        live555/liveMedia/include/MediaSession.hh
        live555/liveMedia/include/MediaSink.hh
        live555/liveMedia/include/MediaSource.hh
        live555/liveMedia/include/MediaTranscodingTable.hh
        live555/liveMedia/include/MP3ADU.hh
        live555/liveMedia/include/MP3ADUinterleaving.hh
        live555/liveMedia/include/MP3ADURTPSink.hh
        live555/liveMedia/include/MP3ADURTPSource.hh
        live555/liveMedia/include/MP3ADUTranscoder.hh
        live555/liveMedia/include/MP3AudioFileServerMediaSubsession.hh
        live555/liveMedia/include/MP3FileSource.hh
        live555/liveMedia/include/MP3Transcoder.hh
        live555/liveMedia/include/MPEG1or2AudioRTPSink.hh
        live555/liveMedia/include/MPEG1or2AudioRTPSource.hh
        live555/liveMedia/include/MPEG1or2AudioStreamFramer.hh
        live555/liveMedia/include/MPEG1or2Demux.hh
        live555/liveMedia/include/MPEG1or2DemuxedElementaryStream.hh
        live555/liveMedia/include/MPEG1or2DemuxedServerMediaSubsession.hh
        live555/liveMedia/include/MPEG1or2FileServerDemux.hh
        live555/liveMedia/include/MPEG1or2VideoFileServerMediaSubsession.hh
        live555/liveMedia/include/MPEG1or2VideoRTPSink.hh
        live555/liveMedia/include/MPEG1or2VideoRTPSource.hh
        live555/liveMedia/include/MPEG1or2VideoStreamDiscreteFramer.hh
        live555/liveMedia/include/MPEG1or2VideoStreamFramer.hh
        live555/liveMedia/include/MPEG2IndexFromTransportStream.hh
        live555/liveMedia/include/MPEG2TransportFileServerMediaSubsession.hh
        live555/liveMedia/include/MPEG2TransportStreamAccumulator.hh
        live555/liveMedia/include/MPEG2TransportStreamFramer.hh
        live555/liveMedia/include/MPEG2TransportStreamFromESSource.hh
        live555/liveMedia/include/MPEG2TransportStreamFromPESSource.hh
        live555/liveMedia/include/MPEG2TransportStreamIndexFile.hh
        live555/liveMedia/include/MPEG2TransportStreamMultiplexor.hh
        live555/liveMedia/include/MPEG2TransportStreamTrickModeFilter.hh
        live555/liveMedia/include/MPEG2TransportUDPServerMediaSubsession.hh
        live555/liveMedia/include/MPEG4ESVideoRTPSink.hh
        live555/liveMedia/include/MPEG4ESVideoRTPSource.hh
        live555/liveMedia/include/MPEG4GenericRTPSink.hh
        live555/liveMedia/include/MPEG4GenericRTPSource.hh
        live555/liveMedia/include/MPEG4LATMAudioRTPSink.hh
        live555/liveMedia/include/MPEG4LATMAudioRTPSource.hh
        live555/liveMedia/include/MPEG4VideoFileServerMediaSubsession.hh
        live555/liveMedia/include/MPEG4VideoStreamDiscreteFramer.hh
        live555/liveMedia/include/MPEG4VideoStreamFramer.hh
        live555/liveMedia/include/MPEGVideoStreamFramer.hh
        live555/liveMedia/include/MultiFramedRTPSink.hh
        live555/liveMedia/include/MultiFramedRTPSource.hh
        live555/liveMedia/include/OggFile.hh
        live555/liveMedia/include/OggFileServerDemux.hh
        live555/liveMedia/include/OggFileSink.hh
        live555/liveMedia/include/OnDemandServerMediaSubsession.hh
        live555/liveMedia/include/ourMD5.hh
        live555/liveMedia/include/OutputFile.hh
        live555/liveMedia/include/PassiveServerMediaSubsession.hh
        live555/liveMedia/include/ProxyServerMediaSession.hh
        live555/liveMedia/include/QCELPAudioRTPSource.hh
        live555/liveMedia/include/QuickTimeFileSink.hh
        live555/liveMedia/include/QuickTimeGenericRTPSource.hh
        live555/liveMedia/include/RTCP.hh
        live555/liveMedia/include/RTPInterface.hh
        live555/liveMedia/include/RTPSink.hh
        live555/liveMedia/include/RTPSource.hh
        live555/liveMedia/include/RTSPClient.hh
        live555/liveMedia/include/RTSPCommon.hh
        live555/liveMedia/include/RTSPRegisterSender.hh
        live555/liveMedia/include/RTSPServer.hh
        live555/liveMedia/include/RTSPServerSupportingHTTPStreaming.hh
        live555/liveMedia/include/ServerMediaSession.hh
        live555/liveMedia/include/SimpleRTPSink.hh
        live555/liveMedia/include/SimpleRTPSource.hh
        live555/liveMedia/include/SIPClient.hh
        live555/liveMedia/include/StreamReplicator.hh
        live555/liveMedia/include/T140TextRTPSink.hh
        live555/liveMedia/include/TCPStreamSink.hh
        live555/liveMedia/include/TextRTPSink.hh
        live555/liveMedia/include/TheoraVideoRTPSink.hh
        live555/liveMedia/include/TheoraVideoRTPSource.hh
        live555/liveMedia/include/uLawAudioFilter.hh
        live555/liveMedia/include/VideoRTPSink.hh
        live555/liveMedia/include/VorbisAudioRTPSink.hh
        live555/liveMedia/include/VorbisAudioRTPSource.hh
        live555/liveMedia/include/VP8VideoRTPSink.hh
        live555/liveMedia/include/VP8VideoRTPSource.hh
        live555/liveMedia/include/VP9VideoRTPSink.hh
        live555/liveMedia/include/VP9VideoRTPSource.hh
        live555/liveMedia/include/WAVAudioFileServerMediaSubsession.hh
        live555/liveMedia/include/WAVAudioFileSource.hh
        live555/liveMedia/AC3AudioFileServerMediaSubsession.cpp
        live555/liveMedia/AC3AudioRTPSink.cpp
        live555/liveMedia/AC3AudioRTPSource.cpp
        live555/liveMedia/AC3AudioStreamFramer.cpp
        live555/liveMedia/ADTSAudioFileServerMediaSubsession.cpp
        live555/liveMedia/ADTSAudioFileSource.cpp
        live555/liveMedia/AMRAudioFileServerMediaSubsession.cpp
        live555/liveMedia/AMRAudioFileSink.cpp
        live555/liveMedia/AMRAudioFileSource.cpp
        live555/liveMedia/AMRAudioRTPSink.cpp
        live555/liveMedia/AMRAudioRTPSource.cpp
        live555/liveMedia/AMRAudioSource.cpp
        live555/liveMedia/AudioInputDevice.cpp
        live555/liveMedia/AudioRTPSink.cpp
        live555/liveMedia/AVIFileSink.cpp
        live555/liveMedia/Base64.cpp
        live555/liveMedia/BasicUDPSink.cpp
        live555/liveMedia/BasicUDPSource.cpp
        live555/liveMedia/BitVector.cpp
        live555/liveMedia/ByteStreamFileSource.cpp
        live555/liveMedia/ByteStreamMemoryBufferSource.cpp
        live555/liveMedia/ByteStreamMultiFileSource.cpp
        live555/liveMedia/DeviceSource.cpp
        live555/liveMedia/DigestAuthentication.cpp
        live555/liveMedia/DVVideoFileServerMediaSubsession.cpp
        live555/liveMedia/DVVideoRTPSink.cpp
        live555/liveMedia/DVVideoRTPSource.cpp
        live555/liveMedia/DVVideoStreamFramer.cpp
        live555/liveMedia/EBMLNumber.cpp
        live555/liveMedia/EBMLNumber.hh
        live555/liveMedia/FileServerMediaSubsession.cpp
        live555/liveMedia/FileSink.cpp
        live555/liveMedia/FramedFileSource.cpp
        live555/liveMedia/FramedFilter.cpp
        live555/liveMedia/FramedSource.cpp
        live555/liveMedia/GenericMediaServer.cpp
        live555/liveMedia/GSMAudioRTPSink.cpp
        live555/liveMedia/H261VideoRTPSource.cpp
        live555/liveMedia/H263plusVideoFileServerMediaSubsession.cpp
        live555/liveMedia/H263plusVideoRTPSink.cpp
        live555/liveMedia/H263plusVideoRTPSource.cpp
        live555/liveMedia/H263plusVideoStreamFramer.cpp
        live555/liveMedia/H263plusVideoStreamParser.cpp
        live555/liveMedia/H263plusVideoStreamParser.hh
        live555/liveMedia/H264or5VideoFileSink.cpp
        live555/liveMedia/H264or5VideoRTPSink.cpp
        live555/liveMedia/H264or5VideoStreamDiscreteFramer.cpp
        live555/liveMedia/H264or5VideoStreamFramer.cpp
        live555/liveMedia/H264VideoFileServerMediaSubsession.cpp
        live555/liveMedia/H264VideoFileSink.cpp
        live555/liveMedia/H264VideoRTPSink.cpp
        live555/liveMedia/H264VideoRTPSource.cpp
        live555/liveMedia/H264VideoStreamDiscreteFramer.cpp
        live555/liveMedia/H264VideoStreamFramer.cpp
        live555/liveMedia/H265VideoFileServerMediaSubsession.cpp
        live555/liveMedia/H265VideoFileSink.cpp
        live555/liveMedia/H265VideoRTPSink.cpp
        live555/liveMedia/H265VideoRTPSource.cpp
        live555/liveMedia/H265VideoStreamDiscreteFramer.cpp
        live555/liveMedia/H265VideoStreamFramer.cpp
        live555/liveMedia/InputFile.cpp
        live555/liveMedia/JPEGVideoRTPSink.cpp
        live555/liveMedia/JPEGVideoRTPSource.cpp
        live555/liveMedia/JPEGVideoSource.cpp
        live555/liveMedia/Locale.cpp
        live555/liveMedia/MatroskaDemuxedTrack.cpp
        live555/liveMedia/MatroskaDemuxedTrack.hh
        live555/liveMedia/MatroskaFile.cpp
        live555/liveMedia/MatroskaFileParser.cpp
        live555/liveMedia/MatroskaFileParser.hh
        live555/liveMedia/MatroskaFileServerDemux.cpp
        live555/liveMedia/MatroskaFileServerMediaSubsession.cpp
        live555/liveMedia/MatroskaFileServerMediaSubsession.hh
        live555/liveMedia/Media.cpp
        live555/liveMedia/MediaSession.cpp
        live555/liveMedia/MediaSink.cpp
        live555/liveMedia/MediaSource.cpp
        live555/liveMedia/MP3ADU.cpp
        live555/liveMedia/MP3ADUdescriptor.cpp
        live555/liveMedia/MP3ADUdescriptor.hh
        live555/liveMedia/MP3ADUinterleaving.cpp
        live555/liveMedia/MP3ADURTPSink.cpp
        live555/liveMedia/MP3ADURTPSource.cpp
        live555/liveMedia/MP3ADUTranscoder.cpp
        live555/liveMedia/MP3AudioFileServerMediaSubsession.cpp
        live555/liveMedia/MP3AudioMatroskaFileServerMediaSubsession.cpp
        live555/liveMedia/MP3AudioMatroskaFileServerMediaSubsession.hh
        live555/liveMedia/MP3FileSource.cpp
        live555/liveMedia/MP3Internals.cpp
        live555/liveMedia/MP3Internals.hh
        live555/liveMedia/MP3InternalsHuffman.cpp
        live555/liveMedia/MP3InternalsHuffman.hh
        live555/liveMedia/MP3InternalsHuffmanTable.cpp
        live555/liveMedia/MP3StreamState.cpp
        live555/liveMedia/MP3StreamState.hh
        live555/liveMedia/MP3Transcoder.cpp
        live555/liveMedia/MPEG1or2AudioRTPSink.cpp
        live555/liveMedia/MPEG1or2AudioRTPSource.cpp
        live555/liveMedia/MPEG1or2AudioStreamFramer.cpp
        live555/liveMedia/MPEG1or2Demux.cpp
        live555/liveMedia/MPEG1or2DemuxedElementaryStream.cpp
        live555/liveMedia/MPEG1or2DemuxedServerMediaSubsession.cpp
        live555/liveMedia/MPEG1or2FileServerDemux.cpp
        live555/liveMedia/MPEG1or2VideoFileServerMediaSubsession.cpp
        live555/liveMedia/MPEG1or2VideoRTPSink.cpp
        live555/liveMedia/MPEG1or2VideoRTPSource.cpp
        live555/liveMedia/MPEG1or2VideoStreamDiscreteFramer.cpp
        live555/liveMedia/MPEG1or2VideoStreamFramer.cpp
        live555/liveMedia/MPEG2IndexFromTransportStream.cpp
        live555/liveMedia/MPEG2TransportFileServerMediaSubsession.cpp
        live555/liveMedia/MPEG2TransportStreamAccumulator.cpp
        live555/liveMedia/MPEG2TransportStreamFramer.cpp
        live555/liveMedia/MPEG2TransportStreamFromESSource.cpp
        live555/liveMedia/MPEG2TransportStreamFromPESSource.cpp
        live555/liveMedia/MPEG2TransportStreamIndexFile.cpp
        live555/liveMedia/MPEG2TransportStreamMultiplexor.cpp
        live555/liveMedia/MPEG2TransportStreamTrickModeFilter.cpp
        live555/liveMedia/MPEG2TransportUDPServerMediaSubsession.cpp
        live555/liveMedia/MPEG4ESVideoRTPSink.cpp
        live555/liveMedia/MPEG4ESVideoRTPSource.cpp
        live555/liveMedia/MPEG4GenericRTPSink.cpp
        live555/liveMedia/MPEG4GenericRTPSource.cpp
        live555/liveMedia/MPEG4LATMAudioRTPSink.cpp
        live555/liveMedia/MPEG4LATMAudioRTPSource.cpp
        live555/liveMedia/MPEG4VideoFileServerMediaSubsession.cpp
        live555/liveMedia/MPEG4VideoStreamDiscreteFramer.cpp
        live555/liveMedia/MPEG4VideoStreamFramer.cpp
        live555/liveMedia/MPEGVideoStreamFramer.cpp
        live555/liveMedia/MPEGVideoStreamParser.cpp
        live555/liveMedia/MPEGVideoStreamParser.hh
        live555/liveMedia/MultiFramedRTPSink.cpp
        live555/liveMedia/MultiFramedRTPSource.cpp
        live555/liveMedia/OggDemuxedTrack.cpp
        live555/liveMedia/OggDemuxedTrack.hh
        live555/liveMedia/OggFile.cpp
        live555/liveMedia/OggFileParser.cpp
        live555/liveMedia/OggFileParser.hh
        live555/liveMedia/OggFileServerDemux.cpp
        live555/liveMedia/OggFileServerMediaSubsession.cpp
        live555/liveMedia/OggFileServerMediaSubsession.hh
        live555/liveMedia/OggFileSink.cpp
        live555/liveMedia/OnDemandServerMediaSubsession.cpp
        live555/liveMedia/ourMD5.cpp
        live555/liveMedia/OutputFile.cpp
        live555/liveMedia/PassiveServerMediaSubsession.cpp
        live555/liveMedia/ProxyServerMediaSession.cpp
        live555/liveMedia/QCELPAudioRTPSource.cpp
        live555/liveMedia/QuickTimeFileSink.cpp
        live555/liveMedia/QuickTimeGenericRTPSource.cpp
        live555/liveMedia/RTCP.cpp
        live555/liveMedia/rtcp_from_spec.c
        live555/liveMedia/rtcp_from_spec.h
        live555/liveMedia/RTPInterface.cpp
        live555/liveMedia/RTPSink.cpp
        live555/liveMedia/RTPSource.cpp
        live555/liveMedia/RTSPClient.cpp
        live555/liveMedia/RTSPCommon.cpp
        live555/liveMedia/RTSPRegisterSender.cpp
        live555/liveMedia/RTSPServer.cpp
        live555/liveMedia/RTSPServerRegister.cpp
        live555/liveMedia/RTSPServerSupportingHTTPStreaming.cpp
        live555/liveMedia/ServerMediaSession.cpp
        live555/liveMedia/SimpleRTPSink.cpp
        live555/liveMedia/SimpleRTPSource.cpp
        live555/liveMedia/SIPClient.cpp
        live555/liveMedia/StreamParser.cpp
        live555/liveMedia/StreamParser.hh
        live555/liveMedia/StreamReplicator.cpp
        live555/liveMedia/T140TextRTPSink.cpp
        live555/liveMedia/TCPStreamSink.cpp
        live555/liveMedia/TextRTPSink.cpp
        live555/liveMedia/TheoraVideoRTPSink.cpp
        live555/liveMedia/TheoraVideoRTPSource.cpp
        live555/liveMedia/uLawAudioFilter.cpp
        live555/liveMedia/VideoRTPSink.cpp
        live555/liveMedia/VorbisAudioRTPSink.cpp
        live555/liveMedia/VorbisAudioRTPSource.cpp
        live555/liveMedia/VP8VideoRTPSink.cpp
        live555/liveMedia/VP8VideoRTPSource.cpp
        live555/liveMedia/VP9VideoRTPSink.cpp
        live555/liveMedia/VP9VideoRTPSource.cpp
        live555/liveMedia/WAVAudioFileServerMediaSubsession.cpp
        live555/liveMedia/WAVAudioFileSource.cpp
        live555/mediaServer/DynamicRTSPServer.cpp
        live555/mediaServer/DynamicRTSPServer.hh
        live555/mediaServer/live555MediaServer.cpp
        live555/mediaServer/version.hh
        live555/proxyServer/live555ProxyServer.cpp
        live555/testProgs/MPEG2TransportStreamIndexer.cpp
        live555/testProgs/openRTSP.cpp
        live555/testProgs/playCommon.cpp
        live555/testProgs/playCommon.hh
        live555/testProgs/playSIP.cpp
        live555/testProgs/registerRTSPStream.cpp
        live555/testProgs/sapWatch.cpp
        live555/testProgs/testAMRAudioStreamer.cpp
        live555/testProgs/testDVVideoStreamer.cpp
        live555/testProgs/testGSMStreamer.cpp
        live555/testProgs/testH264VideoStreamer.cpp
        live555/testProgs/testH264VideoToTransportStream.cpp
        live555/testProgs/testH265VideoStreamer.cpp
        live555/testProgs/testH265VideoToTransportStream.cpp
        live555/testProgs/testMKVStreamer.cpp
        live555/testProgs/testMP3Receiver.cpp
        live555/testProgs/testMP3Streamer.cpp
        live555/testProgs/testMPEG1or2AudioVideoStreamer.cpp
        live555/testProgs/testMPEG1or2ProgramToTransportStream.cpp
        live555/testProgs/testMPEG1or2Splitter.cpp
        live555/testProgs/testMPEG1or2VideoReceiver.cpp
        live555/testProgs/testMPEG1or2VideoStreamer.cpp
        live555/testProgs/testMPEG2TransportReceiver.cpp
        live555/testProgs/testMPEG2TransportStreamer.cpp
        live555/testProgs/testMPEG2TransportStreamTrickPlay.cpp
        live555/testProgs/testMPEG4VideoStreamer.cpp
        live555/testProgs/testOggStreamer.cpp
        live555/testProgs/testOnDemandRTSPServer.cpp
        live555/testProgs/testRelay.cpp
        live555/testProgs/testReplicator.cpp
        live555/testProgs/testRTSPClient.cpp
        live555/testProgs/testWAVAudioStreamer.cpp
        live555/testProgs/vobStreamer.cpp
        live555/UsageEnvironment/include/Boolean.hh
        live555/UsageEnvironment/include/HashTable.hh
        live555/UsageEnvironment/include/strDup.hh
        live555/UsageEnvironment/include/UsageEnvironment.hh
        live555/UsageEnvironment/include/UsageEnvironment_version.hh
        live555/UsageEnvironment/HashTable.cpp
        live555/UsageEnvironment/strDup.cpp
        live555/UsageEnvironment/UsageEnvironment.cpp
        live555/WindowsAudioInputDevice/showAudioInputPorts.cpp
        live555/WindowsAudioInputDevice/WindowsAudioInputDevice_common.cpp
        live555/WindowsAudioInputDevice/WindowsAudioInputDevice_common.hh
        live555/WindowsAudioInputDevice/WindowsAudioInputDevice_mixer.cpp
        live555/WindowsAudioInputDevice/WindowsAudioInputDevice_mixer.hh
        live555/WindowsAudioInputDevice/WindowsAudioInputDevice_noMixer.cpp
        live555/WindowsAudioInputDevice/WindowsAudioInputDevice_noMixer.hh
        NetEventManage/include/cclientmanage.h
        NetEventManage/include/cnoncopyclass.h
        NetEventManage/include/comm.h
        NetEventManage/include/cservermanage.h
        NetEventManage/include/csiganlmanage.h
        NetEventManage/include/ctcpsocket.h
        NetEventManage/include/cthreadpool.h
        NetEventManage/include/ctimermanage.h
        NetEventManage/include/lockmanage.h
        NetEventManage/include/MemoryPool.h
        NetEventManage/source/cclientmanage.cpp
        NetEventManage/source/cservermanage.cpp
        NetEventManage/source/csignalmanage.cpp
        NetEventManage/source/ctcpsocket.cpp
        NetEventManage/source/cthreadpool.cpp
        NetEventManage/source/ctimermanage.cpp
        NetEventManage/main.cpp
        network/broadcast_client.cpp
        network/broadcast_server.cpp
        network/CDN_server.cpp
        network/client.cpp
        network/multicast_client.cpp
        network/multicast_server.cpp
        network/server.cpp
        tinyPortMapper/common.cpp
        tinyPortMapper/common.h
        tinyPortMapper/fd_manager.cpp
        tinyPortMapper/fd_manager.h
        tinyPortMapper/log.cpp
        tinyPortMapper/log.h
        tinyPortMapper/main.cpp
        ydx_timer_util/ydx_timer.cpp
        ydx_timer_util/ydx_timer.h
        ydx_timer_util/ydx_timer_set.cpp
        ydx_timer_util/ydx_timer_set.h
        ydx_timer_util/ydx_timer_wheel.cpp
        ydx_timer_util/ydx_timer_wheel.h
        ydx_timer_util/ydx_timerid.h)
